--- a/index.html
+++ b/index.html
@@ -12,9 +12,17 @@
         }
       }
     </script>
-    <script type="module" src="./index.js"></script>
+    <!-- <script type="module" src="./index.js"></script>
+    <script type="module" src="./light.js"></script> -->
+    <!-- <script type="module" src="./stats.js"></script> -->
+      <script type="module" src="./gui.js"></script>
+        <script type="module" src="./texture.js"></script>
   </head>
   <body>
-    <div id="webgl"></div>
+    <!-- <div id="webgl"></div>
+     <div id="light"></div> -->
+    <!-- <div id="stats"></div> -->
+    <div id="gui"></div>
+    <div id="texture"></div>
   </body>
 </html>
